--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -2,7 +2,7 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
-@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Oswald:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Open+Sans:wght@300;700&family=Oswald:wght@300&display=swap');
 
 
 :root {
@@ -13,8 +13,8 @@ Fonts are separated by a | */
   --accent2-color: #EFAF8E;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: Oswald, "IM Fell French Canon SC";
-  --paragraph-font: "Cutive Mono", Lato, Helvetica, sans-serif;
+  --heading-font: "Open Sans", Oswald, "IM Fell French Canon SC";
+  --paragraph-font: "Open Sans", "Cutive Mono", Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #000000;  /* headlines on a white background */ 
