--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Oswald:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Open+Sans:wght@300;700&family=Oswald:wght@300&display=swap');
 
 body {
     background-color: #3C3D42;
     color: #DFF3E3;
-    font-family: "Cutive Mono", Lato, Helvetica, sans-serif;
+    font-family: "Open Sans", "Cutive Mono", Lato, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     font-size: 22px;
@@ -30,7 +30,7 @@ body {
 
 .home-title {
     text-align: center;
-    font-family: Oswald, "IM Fell French Canon", Arial, Helvetica, sans-serif;
+    font-family: "Open Sans", Oswald, "IM Fell French Canon", Arial, Helvetica, sans-serif;
 }
 
 #logo_link {
@@ -108,3 +108,66 @@ footer .social img {
 footer .social {
     grid-column: 4/5;
 }
+
+hr {
+    margin: 0;
+    color: white;
+}
+
+#projects {
+    margin: 0 20px 20px;
+}
+
+.project {
+    display: grid;
+    grid-template-columns: 70% 30%;
+    margin-top: 20px;
+}
+
+.project h3 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+.project p {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+.project img {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    width: 100%;
+}
+
+#resume {
+    display: grid;
+    grid-template-columns: 30% 70%;
+}
+
+.profile {
+    grid-column: 1/2;
+    margin: 15px;
+}
+
+.profile img {
+    width: 100%;
+}
+
+.work-experience {
+    grid-column: 2/3;
+    margin: 15px;
+}
+
+.education {
+    grid-column: 2/3;
+    margin: 15px;
+}
+
+.skills {
+    grid-column: 2/3;
+    margin: 15px;
+}
+
+.resume-section {
+    background-color: #303136;
+}
+
