--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,13 +128,22 @@ hr {
     grid-column: 1/2;
     grid-row: 1/2;
 }
+
 .project p {
     grid-column: 1/2;
     grid-row: 2/3;
 }
+
+.project a {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    color: #DFF3E3;
+    text-decoration: none;
+}
+
 .project img {
     grid-column: 2/3;
-    grid-row: 1/3;
+    grid-row: 1/4;
     width: 100%;
 }
 
