--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,6 +122,7 @@ hr {
     display: grid;
     grid-template-columns: 70% 30%;
     margin-top: 20px;
+    background-color: #303136;
 }
 
 .project h3 {
